--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 1</title>
+    <title>Homework 2</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
@@ -11,26 +18,26 @@
     <header> 
 
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a class="header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
             <ul>
                 <li>
-                    <a href="#">Studio</a>
+                    <a class="header-link" href="#">Studio</a>
                 </li>
                 <li>
-                    <a href="#">Portfolio</a>
+                    <a class="header-link" href="#">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Contacts</a>
+                    <a class="header-link" href="#">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="address" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -116,3 +123,33 @@
     
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.visually-hidden {
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1px;
+border: 0;
+padding: 0;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
+}
