--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </li>
                 <li>
                     <img src="./images/our-portfolio/screen.jpg"
-                     alt="creen Illustrations"
+                     alt="Screen Illustrations"
                      width="360">
                      <h3 class="our-portfolio-subhead">Screen Illustrations</h3>
                      <p class="our-portfolio-text">Design</p>
