correct index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                      
                 </li>
                 <li>
-                    <img src="/images/our-portfolio/meditationapp.jpg"
+                    <img src="./images/our-portfolio/meditationapp.jpg"
                      alt="Meditation App"
                      width="360">
                      <h3 class="our-portfolio-subhead">Meditation App</h3>
