--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
             <a class="header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
             <ul>
                 <li>
-                    <a class="header-link" href="#">Studio</a>
+                    <a class="header-link" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a class="header-link" href="#">Portfolio</a>
+                    <a class="header-link" href="./index.html">Portfolio</a>
                 </li>
                 <li>
-                    <a class="header-link" href="#">Contacts</a>
+                    <a class="header-link" href="./index.html">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li>
-                    <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="header-link-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="address" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="header-link-address" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
