correcting errors throughout the project

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                     <a class="header-link" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a class="header-link" href="./index.html">Portfolio</a>
+                    <a class="header-link" href="">Portfolio</a>
                 </li>
                 <li>
-                    <a class="header-link" href="./index.html">Contacts</a>
+                    <a class="header-link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address>
+        <address class="header-address-container">
             <ul>
                 <li>
                     <a class="header-link-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -79,29 +79,29 @@
         <!-- Our team -->
         <section class="our-team-section">
             <h2 class="our-team-title">Our Team</h2>
-            <ul>
-                <li>
+            <ul> 
+                <li class="our-team-section-list">
                     <img src="./images/markguerrero.jpg"
                      alt="mark"
                       width="264">
                     <h3 class="our-team-subhead">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="our-team-section-list">
                     <img src="./images/tomford.jpg"
                      alt="tom"
                       width="264">
                     <h3 class="our-team-subhead">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="our-team-section-list">
                     <img src="./images/camilagaria.jpg"
                      alt="camila"
                       width="264">
                     <h3 class="our-team-subhead">Camila Garcia</h3> 
                     <p class="our-team-text">Marketing</p>
                 </li>
-                <li>
+                <li class="our-team-section-list">
                     <img src="./images/danielwilson.jpg"
                      alt="daniel"
                       width="264">
