--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <!-- Our advantage section -->
         <section>
-            <h2 class="visually-hidden">advantage</h2>
+            <h2>advantage</h2>
             <ul>
                 <li>
                     <h3 class="advantage-title">Strategy</h3>
